--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,14 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "irazasyed/telegram-bot-sdk": "^2.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "optimus/distributed-laravel": "0.1.*",
+        "optimus/api-consumer": "0.2.*",
         "optimus/bruno": "~3.0",
+        "optimus/distributed-laravel": "0.1.*",
         "optimus/genie": "~2.0",
-        "optimus/heimdal": "~1.0",
-        "optimus/api-consumer": "0.2.*"
+        "optimus/heimdal": "~1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
