generate new staging app with icons

--- a/App Zendesk Packages/Staging/Telegram/requirements_channel_app/manifest.json
+++ b/App Zendesk Packages/Staging/Telegram/requirements_channel_app/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Telegram Channel Bot",
   "author": {
-    "name": "@aketz_a",
+    "name": "Zendesk",
     "email": "support@zendesk.com"
   },
   "defaultLocale": "en",
