--- a/App Zendesk Packages/Staging/Instagram/requirements_channel_app/manifest.json
+++ b/App Zendesk Packages/Staging/Instagram/requirements_channel_app/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Instagram Channel Bot",
+  "name": "Instagram Channel Staging",
   "author": {
     "name": "Zendesk",
     "email": "support@zendesk.com"
   },
   "defaultLocale": "en",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "requirementsOnly": true
 }
