--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,5 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TIME_EXPIRE_FOR_TICKETS_IN_MINUTES_TELEGRAM =
+
+GOOGLE_MAPS_API =
