--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "cosenary/instagram": "^2.3",
         "doctrine/dbal": "^2.7",
+        "facebook/graph-sdk": "^5.6",
         "fideloper/proxy": "^4.0",
         "irazasyed/telegram-bot-sdk": "^2.0",
         "laravel/framework": "5.6.*",
