--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref": "/build/",
             "outputPath": "../public/build",
             "index": "src/index.html",
             "main": "src/main.ts",
