new production package

--- a/App Zendesk Packages/Production/Telegram/requirements_channel_app/manifest.json
+++ b/App Zendesk Packages/Production/Telegram/requirements_channel_app/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Telegram Channel Bot",
+  "name": "Telegram Channel",
   "author": {
-    "name": "@aketz_a",
-    "email": "support@zendesk.com"
+    "name": "AssureSoft",
+    "email": "zendesk@assuresoft.com"
   },
   "defaultLocale": "en",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.1",
   "requirementsOnly": true
 }
