--- a/App Zendesk Packages/Production/Telegram/requirements_channel_app/manifest.json
+++ b/App Zendesk Packages/Production/Telegram/requirements_channel_app/manifest.json
@@ -2,10 +2,11 @@
   "name": "Telegram Channel",
   "author": {
     "name": "AssureSoft",
-    "email": "zendesk@assuresoft.com"
+    "email": "zendesk@assuresoft.com",
+    "url": "https://www.assuresoft.com"
   },
   "defaultLocale": "en",
-  "private": true,
+  "private": false,
   "version": "1.0.1",
   "requirementsOnly": true
 }
