--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "irazasyed/telegram-bot-sdk": "^2.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.4.0",
         "optimus/api-consumer": "0.2.*",
         "optimus/bruno": "~3.0",
         "optimus/distributed-laravel": "0.1.*",
