--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "ext-gd": "^7.1",
+        "ext-gd": "*",
         "doctrine/dbal": "^2.7",
         "facebook/graph-sdk": "^5.6",
         "fideloper/proxy": "^4.0",
