First stage for jobs queues and horizon helper

--- a/.env.example
+++ b/.env.example
@@ -18,11 +18,9 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=redis
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_URL=redis://null:null@127.0.0.1:6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
@@ -40,3 +38,9 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TIME_EXPIRE_FOR_TICKETS_IN_MINUTES_TELEGRAM =
+
+FACEBOOK_APP_ID =
+FACEBOOK_APP_SECRET =
+FACEBOOK_DEFAULT_GRAPH_VERSION =
+
+HORIZON_AUTH=
