--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "irazasyed/telegram-bot-sdk": "^2.0",
         "laravel/framework": "5.6.*",
+        "laravel/horizon": "^1.3",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
         "optimus/api-consumer": "0.2.*",
@@ -19,6 +20,7 @@
         "optimus/distributed-laravel": "0.1.*",
         "optimus/genie": "~2.0",
         "optimus/heimdal": "~1.0",
+        "predis/predis": "^1.1",
         "spatie/laravel-directory-cleanup": "^1.1"
     },
     "require-dev": {
