--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "facebook/graph-sdk": "^5.6",
         "fideloper/proxy": "^4.0",
         "irazasyed/telegram-bot-sdk": "^2.0",
+        "laracasts/utilities": "^3.0",
         "laravel/framework": "5.6.*",
         "laravel/horizon": "^1.3",
         "laravel/tinker": "^1.0",
