--- a/App Zendesk Packages/Production/Instagram/requirements_channel_app/manifest.json
+++ b/App Zendesk Packages/Production/Instagram/requirements_channel_app/manifest.json
@@ -1,11 +1,12 @@
 {
-  "name": "Instagram Channel Bot",
+  "name": "Instagram Channel",
   "author": {
-    "name": "Zendesk",
-    "email": "support@zendesk.com"
+    "name": "AssureSoft",
+    "email": "zendesk@assuresoft.com",
+    "url": "https://www.assuresoft.com"
   },
   "defaultLocale": "en",
-  "private": true,
+  "private": false,
   "version": "1.0.1",
   "requirementsOnly": true
 }
