--- a/linkedin/src/main/resources/application.properties
+++ b/linkedin/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.application.name=linkedin-Impl
+server.port=8305
+api.token=3245twegf
+api.client.id=secret
+api.return.url=secret
+api.account.id=secret
