Create InstagramService Dtos Integrate Json mapper Integrated @transaction

--- a/instagramService/src/main/resources/application.properties
+++ b/instagramService/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-api.persistence.service=http://db-service/rest-api/instagram
+api.persistence.instagram=http://db-service/api/instagram
 api.instagram.service=http://instagram-Impl/rest/posts
+api.persistence.settings=http://db-service/api/settings
