--- a/db-service/src/main/resources/application.properties
+++ b/db-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=db-service
 server.port=8300
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/dbService
+spring.datasource.url=jdbc:mysql://localhost:3306/DB
 spring.datasource.username=root
 spring.datasource.password=pEre!va1
 ## Hibernate Properties
